--- a/css/styles.css
+++ b/css/styles.css
@@ -7412,6 +7412,11 @@ textarea.form-control-lg {
   margin-left: auto !important;
 }
 
+.ms-justify {
+  justify-content:center;
+  align-items:center;
+}
+
 .p-0 {
   padding: 0 !important;
 }
